--- a/Section 3/WebDevBootCamp.html
+++ b/Section 3/WebDevBootCamp.html
@@ -6,7 +6,21 @@
     <title>Web Development Boot Camp</title>
   </head>
   <body>
+    <h1>Heading One</h1>
+    <h2>Heading Two</h2>
+    <h3>Heading Three</h3>
+    <h4>heading Four</h4>
+    <h4>Heading Four</h4>
+    <p>heading exsist to add structure to the page</p>
     <p>This is the <b>first</b> Paragraph</p>
     <p>This is the <b>second</b> Paragraph</p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt quaerat
+      esse rem neque tenetur enim, rerum ea mollitia. Perspiciatis possimus
+      debitis corrupti quae eaque totam ad repellendus ratione harum maiores?
+      Perspiciatis suscipit vero qui explicabo dignissimos, facilis a corrupti
+      nulla sint! Cumque quas illo facere temporibus non provident quo! Porro
+      nulla aut asperiores saepe necessitatibus libero vero numquam quo amet.
+    </p>
   </body>
 </html>
