learned about unordered and ordered lists

--- a/Section 3/WebDevBootCamp.html
+++ b/Section 3/WebDevBootCamp.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
+
+<!--ROOT ELEMENT-->
 <html lang="en">
+  <!--the head contants elements that does not show up in the document itself-->
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--the title element defines the title of the document (the tab)-->
     <title>Web Development Boot Camp</title>
   </head>
+  <!--the body contains all the content of the page (text nav ex.)-->
   <body>
+    <!--Comment-->
     <h1>Heading One</h1>
     <h2>Heading Two</h2>
     <h3>Heading Three</h3>
@@ -22,5 +28,20 @@
       nulla sint! Cumque quas illo facere temporibus non provident quo! Porro
       nulla aut asperiores saepe necessitatibus libero vero numquam quo amet.
     </p>
+    <!--Lists numbered/unordered-->
+    <ol>
+      <li>ordered 1</li>
+      <li>ordered 2</li>
+      <li>ordered 3</li>
+      <li>ordered 4</li>
+      <li>ordered 5</li>
+    </ol>
+    <ul>
+      <li>unordered 1</li>
+      <li>unordered 2</li>
+      <li>unordered 3</li>
+      <li>unordered 4</li>
+      <li>unordered 5</li>
+    </ul>
   </body>
 </html>
