anchor tags with transversal

--- a/Section 3/WebDevBootCamp.html
+++ b/Section 3/WebDevBootCamp.html
@@ -43,5 +43,7 @@
       <li>unordered 4</li>
       <li>unordered 5</li>
     </ul>
+    <!--Anchor tags are used to tansverse from one page to another-->
+    <a href="about.html">I am a link</a>
   </body>
 </html>
