Image tags anc comments

--- a/Section 3/WebDevBootCamp.html
+++ b/Section 3/WebDevBootCamp.html
@@ -45,5 +45,11 @@
     </ul>
     <!--Anchor tags are used to tansverse from one page to another-->
     <a href="about.html">I am a link</a>
+    <!--Image element does not have a close tag.-->
+    <hr />
+    <img
+      src="https://imgs.search.brave.com/cYcicVt3ZP72WqlG2fRJ_mBxtVS022crc8NKRunpHCk/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly9tLm1l/ZGlhLWFtYXpvbi5j/b20vaW1hZ2VzL0kv/NzEycmFXOGdzeUwu/anBn"
+      alt="picture of mario hitting a block"
+    />
   </body>
 </html>
