notes and entity codes

--- a/Section 3/WebDevBootCamp.html
+++ b/Section 3/WebDevBootCamp.html
@@ -51,5 +51,26 @@
       src="https://imgs.search.brave.com/cYcicVt3ZP72WqlG2fRJ_mBxtVS022crc8NKRunpHCk/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly9tLm1l/ZGlhLWFtYXpvbi5j/b20vaW1hZ2VzL0kv/NzEycmFXOGdzeUwu/anBn"
       alt="picture of mario hitting a block"
     />
+    <hr />
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem incidunt
+      <br />
+      architecto asperiores eos velit, nulla sint. Neque tenetur unde inventore
+      <br />
+      quisquam laudantium ipsum, voluptatum, architecto totam nam, facilis eius?
+      <br />
+      Illo. Eveniet recusandae vitae voluptatem, molestias dolor laborum ipsam
+      <br />
+      voluptatum culpa adipisci sunt tempora neque deserunt reiciendis, <br />
+      exercitationem, perspiciatis laboriosam consequatur cum ullam! Soluta
+      <br />
+      modi, reprehenderit nostrum quaerat corporis enim veniam? <br />
+    </p>
+
+    <!--super script and sub script-->
+    <p><sup>1</sup>/<sub>2</sub> + <sup>1</sup>/<sub>2</sub> = 1</p>
+
+    <!--Html Entities used to replace greater than sign using numbers. google them for the one you need. you can use name or number. they have 2 forms for html-->
+    <h2>&spades;</h2>
   </body>
 </html>
