--- a/Lessons/forms.html
+++ b/Lessons/forms.html
@@ -5,5 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forms Demo</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Forms Demo</h1>
+    <!--Forms section-->
+    <!--The input element-->
+    <form action="/tacos">
+      <input type="text" placeholder="UserName" />
+      <input type="password" placeholder="password" />
+      <input type="color" />
+      <input type="number" placeholder="enter a number" />
+    </form>
+  </body>
 </html>
