--- a/Lessons/forms.html
+++ b/Lessons/forms.html
@@ -10,10 +10,22 @@
     <!--Forms section-->
     <!--The input element-->
     <form action="/tacos">
-      <input type="text" placeholder="UserName" />
-      <input type="password" placeholder="password" />
-      <input type="color" />
-      <input type="number" placeholder="enter a number" />
+      <p>
+        <label for="username">enter a username</label>
+        <input id="username" type="text" placeholder="UserName" />
+      </p>
+      <p>
+        <label for="password">enter a password</label>
+        <input id="password" type="password" placeholder="password" />
+      </p>
+      <p>
+        <label for="color">enter a color</label>
+        <input id="color" type="color" />
+      </p>
+      <p>
+        <label for="number">enter a number</label>
+        <input id="number" type="number" placeholder="enter a number" />
+      </p>
     </form>
   </body>
 </html>
