--- a/Lessons/forms.html
+++ b/Lessons/forms.html
@@ -53,5 +53,36 @@
       <!--this will go to the action of the form whitch is /tacos (atm)-->
       <button>Submit</button>
     </form>
+    <!--fun practice-->
+    <h2>Practice Form Using Reddit!</h2>
+    <form action="https://www.reddit.com/search">
+      <!--name has to match pattern for server. reddit's is q-->
+      <input type="text" name="q" />
+      <button>Search Reddit</button>
+    </form>
+    <hr />
+    <h2>Practice Form Using Google!</h2>
+    <!--Google-->
+    <form action="https://www.google.com/search">
+      <!--name has to match pattern for server. Google's is q-->
+      <input type="text" name="q" />
+      <button>Search Google</button>
+    </form>
+    <hr />
+    <h2>Practice Form Using Youtube!</h2>
+    <!--Youtube-->
+    <form action="https://www.youtube.com/results">
+      <!--name has to match pattern for server. Youtube's is search_query-->
+      <input type="text" name="search_query" />
+      <button>Search Youtube</button>
+    </form>
+    <hr />
+    <h2>Amazon search box</h2>
+    <!--Amazon-->
+    <form action="https://www.amazon.com/s">
+      <!--name has to match pattern for server. Amazon's is -->
+      <input type="text" name="k" />
+      <button>Search Amazon</button>
+    </form>
   </body>
 </html>
