--- a/ScoreKeeper/ScoreKepper.html
+++ b/ScoreKeeper/ScoreKepper.html
@@ -21,11 +21,11 @@
         <option value="10">10</option>
       </select>
       <div class="butContainer">
-        <button type="submit" id="playerOne">+1 Player One</button>
-        <button type="submit" id="playerTwo">+1 Player Two</button>
-        <button type="submit" id="reset">Reset</button>
+        <button id="playerOne">+1 Player One</button>
+        <button id="playerTwo">+1 Player Two</button>
+        <button id="reset">Reset</button>
       </div>
     </div>
-    <script src="app.js"></script>
+    <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
