--- a/ScoreKeeper/ScoreKepper.html
+++ b/ScoreKeeper/ScoreKepper.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="mainContainer">
-      <h1>Ping Pong Score Keeper</h1>
+      <h1>Score Keeper</h1>
       <h2><span id="pOneScore">0</span> to <span id="pTwoScore">0</span></h2>
       <h3>Use the buttons below to keep score</h3>
       <label for="playAmount">Playing To: </label>
